Update function name content targeting

--- a/use-cases/content-targeting/2021-01-14-index.md
+++ b/use-cases/content-targeting/2021-01-14-index.md
@@ -47,7 +47,7 @@ To configure your case through *Edge Function Content Targeting*, edit the Edge 
 ~~~
 {
     "cookie_name": Name of the cookie,
-    "header_name": Name of the header, optional but enables
+    "header_name": Name of the header. This attribute is optional but increases the possibilities of setting segmentation by Rules Engine. 
     "domain": domain
     "expires": maximum cookie expiration date,
     "max_age": time in seconds for when a cookie will be deleted,
